--- a/src/sass/components/_popup.scss
+++ b/src/sass/components/_popup.scss
@@ -27,6 +27,7 @@
   .button {
     margin-top: 0.5em;
     width: 75%;
+    -webkit-appearance: none;
   }
 }
 
