--- a/src/sass/components/_product.scss
+++ b/src/sass/components/_product.scss
@@ -278,6 +278,7 @@
   letter-spacing: 3px;
   box-shadow: 0 1px 5px rgba($black, 0.16);
   cursor: pointer;
+  -webkit-appearance: none;
 
   &:hover,
   &:active,
