--- a/src/sass/components/_woocommerce_cart.scss
+++ b/src/sass/components/_woocommerce_cart.scss
@@ -194,6 +194,7 @@
     font-family: $sans;
     font-size: 2rem;
     font-weight: 400;
+    -webkit-appearance: none;
 
     &:hover,
     &:active,
